fix: align def and use fragments